--- a/src/turnos-app/categorias-form.html
+++ b/src/turnos-app/categorias-form.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="../../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
@@ -18,8 +19,10 @@
 <link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../../bower_components/app-layout/app-box/app-box.html">
 <link rel="import" href="../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
+<link rel="import" href="./shared-style.html">
 <dom-module id="categorias-form">
     <template>
+        <style include="shared-style"></style>
         <style is="custom-style">
             body {
                 margin: 0;
@@ -84,11 +87,14 @@
 
         <body>
             <div id="container">
-                <paper-input id="nombre" name="nombre" label="Nombres"></paper-input>
+                <paper-input id="nombre" name="nombre" label="Nombre"></paper-input>
+                <paper-input id="descripcion" name="descripcion" label="Descripción"></paper-input>
                 <div id="categoriasButtons">
-                    <paper-button toggles raised class="indigo" id="cancelCliente">Cancelar</paper-button>
-                    <paper-button toggles raised class="green" id="addCliente">Aceptar</paper-button>
+                    <paper-button toggles raised class="indigo" id="cancelCategoria">Cancelar</paper-button>
+                    <paper-button toggles raised class="green" id="addCategoria">Aceptar</paper-button>
                 </div>
+                <paper-toast id="toastOk" text="" class="fit-bottom"></paper-toast>
+                <paper-toast id="toastError" text="" class="fit-bottom"></paper-toast>
             </div>
         </body>
     </template>
@@ -101,10 +107,14 @@
                 },
                 route: {
                     type: Object
+                },
+                token: {
+                    type: String
                 }
             },
+            behaviors: [URLServiceBehaviors.URLService],
             listeners: {
-                // 'close.tap': '_backMenu'
+                'addCategoria.tap': '_addCategoria'
                 // 'calendario.active-changed': '_activeItem',
                 // 'calendario.tap': '_Calendario'
             },
@@ -113,13 +123,6 @@
             ],
             ready: function () {
                 var drawerLayout = document.getElementById('drawerLayout');
-                // toggle.addEventListener('click', function () {
-                //     if (drawerLayout.forceNarrow || !drawerLayout.narrow) {
-                //         drawerLayout.forceNarrow = !drawerLayout.forceNarrow;
-                //     } else {
-                //         drawerLayout.drawer.toggle();
-                //     }
-                // });
             },
             _activeItem: function (value) {
                 console.log("object", value);
@@ -129,10 +132,27 @@
                 alert("aaa");
             },
             viewChanged: function (value) {
-                console.log(value)
+                if (typeof window.localStorage.session !== "undefined") {
+                    this.token = JSON.parse(window.localStorage.session).token;
+                }
             },
             _backMenu: function () {
                 this.set('route.path', '/none');
+            },
+            _addCategoria: function () {
+                let reallythis = this;
+                let url = this.url_base + 'categorias';
+                let categoria = {};
+                if (this.$.nombre.value != '') {
+                    categoria.nombre = this.$.nombre.value;
+                    categoria.descripcion = this.$.descripcion.value;
+                    categoria.access_token = this.token
+                    //
+                    this.fetchForm(url, categoria);
+                    //
+                } else {
+                    this.showError("Ingrese un Nombre");
+                }
             }
         });
     </script>
