--- a/src/turnos-app/menu-app.html
+++ b/src/turnos-app/menu-app.html
@@ -16,6 +16,7 @@
 <link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../../bower_components/app-layout/app-box/app-box.html">
 <link rel="import" href="../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
+<link rel="import" href="./list-page.html">
 <link rel="import" href="./calendario-app.html">
 <link rel="import" href="./clientes-form.html">
 <link rel="import" href="./categorias-form.html">
@@ -155,27 +156,13 @@
                     </ul>
                 </app-box>
             </header>
-            <!-- <app-toolbar>
-                <paper-icon-button icon="close" id="close"></paper-icon-button>
-                <div main-title>Gestor de Turnos</div>
-                <div condensed-title>
-                    <a href="#/calendario">Calendario</a>
-                </div>
-                <div condensed-title>
-                    <a href="#/clientes">Clientes</a>
-                </div>
-                <div condensed-title>
-                    <a href="#/profesionales">Profesionales</a>
-                </div>
-                <paper-progress value="10" indeterminate bottom-item></paper-progress>
-            </app-toolbar> -->
-
             <iron-lazy-pages attr-for-selected="name" selected="{{pageData.page}}" selected-attribute="selected">
                 <div class="none" name="none"></div>
-                <calendario-app name="calendario" route="{{subRoute}}"></calendario-app>
-                <clientes-form name="clientes" route="{{subRoute}}"></clientes-form>
-                <profesionales-form name="profesionales" route="{{subRoute}}"></profesionales-form>
-                <categorias-form name="categorias" route="{{subRoute}}"></categorias-form>
+                <list-page name="{{pageData.page}}" route="{{subRoute}}" data="{{pageData.page}}"></list-page>
+                <!-- <calendario-app name="calendario" route="{{subRoute}}"></calendario-app> -->
+                <!-- <clientes-form name="clientes" route="{{subRoute}}"></clientes-form> -->
+                <!-- <profesionales-form name="profesionales" route="{{subRoute}}"></profesionales-form> -->
+                <!-- <categorias-form name="categorias" route="{{subRoute}}"></categorias-form> -->
             </iron-lazy-pages>
         </body>
     </template>
